--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "zenoware/sailstream",
+    "name": "zenoware/demo-laravel-unit-tests",
     "type": "project",
-    "description": "Laravel + Sail + Jetstream. Spin something quickly.",
-    "keywords": ["laravel", "framework", "sail", "docker", "jetstream"],
+    "description": "Laravel unit tests demo for training purposes.",
+    "keywords": ["phpunit","laravel"],
     "license": "MIT",
     "require": {
         "php": "^8.3",
@@ -25,6 +25,9 @@
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
+        "files": [
+            "app/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
