--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/telescope": "^4.17",
         "laravel/tinker": "^2.8",
+        "prettus/l5-repository": "^2.9",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
